Blender Crashes if viewport is changed manually while having loop cut selected #77914

Closed
opened 2020-06-16 15:25:50 +02:00 by Amisculesei Cristian Stefan · 6 comments

System Information
Operating system: Win 10 pro 64-bit
Processor: Ryzen 2700X
Graphics card: ASRock Radeon RX 580 Phantom Gaming X OC 8GB
RAM: 32 GB

Error present also on an old build

Operating system: Win 10 pro 64-bit
Processor: Intel® Core™ i5-2450M Processor
Graphics card: GeForce 610M
RAM: 8 GB

Blender Version
Tested in 2.83 and 2.90

Short description of error

Changing viewport while having loop cut tool selected will crash the software
Sometimes it happens after several changes of the viewport

Exact steps for others to reproduce the error
The steps are presented in the video below
After a little more of testing i found out that this issue does not trigger if shortcuts for changing viewport are used 2020-06-16 16-13-00.mkv

**System Information** Operating system: Win 10 pro 64-bit Processor: Ryzen 2700X Graphics card: ASRock Radeon RX 580 Phantom Gaming X OC 8GB RAM: 32 GB Error present also on an old build Operating system: Win 10 pro 64-bit Processor: Intel® Core™ i5-2450M Processor Graphics card: GeForce 610M RAM: 8 GB **Blender Version** Tested in 2.83 and 2.90 **Short description of error** Changing viewport while having loop cut tool selected will crash the software Sometimes it happens after several changes of the viewport **Exact steps for others to reproduce the error** The steps are presented in the video below After a little more of testing i found out that this issue does not trigger if shortcuts for changing viewport are used [2020-06-16 16-13-00.mkv](https://archive.blender.org/developer/F8624975/2020-06-16_16-13-00.mkv)

Added subscriber: @p_one_snake

Added subscriber: @p_one_snake

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.

Exception thrown: read access violation.
DST.vmempool was nullptr.
>	blender.exe!DRW_view_create(const float[4] * viewmat, const float[4] * winmat, const float[4] * culling_viewmat, const float[4] * culling_winmat, bool(*)(bool, void *) visibility_fn) Line 1655	C

 	blender.exe!drw_viewport_var_init() Line 575	C
 	blender.exe!DRW_draw_select_id(Depsgraph * depsgraph, ARegion * region, View3D * v3d, const rcti * rect) Line 2401	C
 	blender.exe!DRW_select_buffer_read(Depsgraph * depsgraph, ARegion * region, View3D * v3d, const rcti * rect, unsigned int * r_buf_len) Line 77	C
 	blender.exe!DRW_select_buffer_find_nearest_to_point(Depsgraph * depsgraph, ARegion * region, View3D * v3d, const int * center, const unsigned int id_min, const unsigned int id_max, unsigned int * dist) Line 372	C
 	blender.exe!EDBM_edge_find_nearest_ex(ViewContext * vc, float * r_dist, float * r_dist_center, const bool use_select_bias, bool use_cycle, BMEdge * * r_eed_zbuf, Base * * bases, unsigned int bases_len, unsigned int * r_base_index) Line 525	C
 	blender.exe!gizmo_preselect_edgering_test_select(bContext * C, wmGizmo * gz, const int * mval) Line 344	C
 	blender.exe!gizmo_find_intersected_3d(bContext * C, const int * co, wmGizmo * * visible_gizmos, const int visible_gizmos_len, int * r_part) Line 682	C
 	blender.exe!wm_gizmomap_highlight_find(wmGizmoMap * gzmap, bContext * C, const wmEvent * event, int * r_part) Line 793	C
 	blender.exe!wm_handlers_do_gizmo_handler(bContext * C, wmWindowManager * wm, wmEventHandler_Gizmo * handler, wmEvent * event, ListBase * handlers, const bool do_debug_handler) Line 2582	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2796	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3360	C
 	blender.exe!WM_main(bContext * C) Line 478	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530	C
 	[External Code]	
I can confirm. ``` Exception thrown: read access violation. DST.vmempool was nullptr. ``` ``` > blender.exe!DRW_view_create(const float[4] * viewmat, const float[4] * winmat, const float[4] * culling_viewmat, const float[4] * culling_winmat, bool(*)(bool, void *) visibility_fn) Line 1655 C blender.exe!drw_viewport_var_init() Line 575 C blender.exe!DRW_draw_select_id(Depsgraph * depsgraph, ARegion * region, View3D * v3d, const rcti * rect) Line 2401 C blender.exe!DRW_select_buffer_read(Depsgraph * depsgraph, ARegion * region, View3D * v3d, const rcti * rect, unsigned int * r_buf_len) Line 77 C blender.exe!DRW_select_buffer_find_nearest_to_point(Depsgraph * depsgraph, ARegion * region, View3D * v3d, const int * center, const unsigned int id_min, const unsigned int id_max, unsigned int * dist) Line 372 C blender.exe!EDBM_edge_find_nearest_ex(ViewContext * vc, float * r_dist, float * r_dist_center, const bool use_select_bias, bool use_cycle, BMEdge * * r_eed_zbuf, Base * * bases, unsigned int bases_len, unsigned int * r_base_index) Line 525 C blender.exe!gizmo_preselect_edgering_test_select(bContext * C, wmGizmo * gz, const int * mval) Line 344 C blender.exe!gizmo_find_intersected_3d(bContext * C, const int * co, wmGizmo * * visible_gizmos, const int visible_gizmos_len, int * r_part) Line 682 C blender.exe!wm_gizmomap_highlight_find(wmGizmoMap * gzmap, bContext * C, const wmEvent * event, int * r_part) Line 793 C blender.exe!wm_handlers_do_gizmo_handler(bContext * C, wmWindowManager * wm, wmEventHandler_Gizmo * handler, wmEvent * event, ListBase * handlers, const bool do_debug_handler) Line 2582 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2796 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857 C blender.exe!wm_event_do_handlers(bContext * C) Line 3360 C blender.exe!WM_main(bContext * C) Line 478 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 C [External Code] ```

This issue was referenced by 9bfd78ae14

This issue was referenced by 9bfd78ae146d50f4bf5017a1c3ee7f3dec0c57db

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-06-17 17:17:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77914
No description provided.