Fix T77914: Blender Crashes if viewport is changed manually while having loop cut selected

The selection engine requires a viewport.